# sercha-cli

./: .gitignore  .golangci.yml  .goreleaser.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  Makefile  README.md  go.mod  go.sum
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: go-ci.yml  release.yml
cgo/: doc.go
cgo/hnsw/: doc.go  hnsw.go  hnsw_stub.go  hnsw_wrapper.cpp  hnsw_wrapper.h
cgo/xapian/: doc.go  xapian.go  xapian_stub.go  xapian_wrapper.cpp  xapian_wrapper.h
clib/: CMakeLists.txt
clib/xapian/: xapian_wrapper.cpp  xapian_wrapper.h
cmd/sercha/: main.go
internal/connectors/: doc.go  factory.go  factory_test.go  oauth_handler.go
internal/connectors/dropbox/: connector.go  file.go  file_test.go  resolver.go  resolver_test.go
internal/connectors/filesystem/: connector.go  connector_test.go  doc.go  resolver.go  resolver_test.go
internal/connectors/github/: client.go  config.go  connector.go  connector_test.go  cursor.go  doc.go  errors.go  files.go  issues.go  oauth_handler.go  pagination.go  pulls.go  ratelimit.go  repos.go  resolver.go  resolver_test.go  wiki.go
internal/connectors/google/: doc.go  errors.go  oauth_handler.go  ratelimit.go  service.go  tokensource.go
internal/core/domain/: auth.go  auth_capability.go  auth_capability_test.go  auth_provider.go  auth_test.go  (+21 more)
internal/logger/: logger.go  logger_test.go
internal/normalisers/: doc.go  registry.go  registry_test.go
internal/postprocessors/: defaults.go  pipeline.go  pipeline_test.go  registry.go  registry_test.go
signing/: codesign-dev.md
(+214 files in other folders)
